src/objects/FAU_Participant__c.object
<CustomObject>
    <description>Four Acres Object to hold the participant details. This central object links the Program to the User while holding the progression of the Participant through the Program. Linked to this object are the Webinars and Modules the Participant is going to the attend.</description>
    <fields>
        <fullName>Billing_and_travel_Accomodation_details__c</fullName>
        <label>Billing and travel/Accomodation details</label>
        <picklist>
            <picklistValues>
                <fullName>NO Billing - NO Travel/Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing - NO Travel/Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO Billing - Travel/Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing - Travel/Accommodation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_Id__c</fullName>
        <label>Chatter Group Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Role_Responibilities__c</fullName>
        <label>Current Role/ Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FAU_Approver_of_Nomination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver of Nomination</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Participants_Approver_of_Nomination</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAU_Approver_of_Nomination_s_Email__c</fullName>
        <formula>FAU_Approver_of_Nomination__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver of Nomination&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Bio_Completeness_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bio Completeness Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAU_Bio_Page_Link__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &apos;apex/FAU_Participant_Bio?id=&apos; + Id, &apos;Bio form&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bio Page Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Biography_Deadline__c</fullName>
        <formula>FAU_Program_Wave__r.FAU_Biography_Deadline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Biography Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAU_Biography__c</fullName>
        <description>This comes and updates the &apos;About Me&apos; section of your Chatter.</description>
        <inlineHelpText>This is from your  &apos;About Me&apos; section of your Personal Chatter.</inlineHelpText>
        <label>Biography</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FAU_Budget_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Holder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FAU_Participants2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAU_Budget_Holder_s_Email__c</fullName>
        <formula>FAU_Budget_Holder__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Holder&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Chatter_Group__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +   FAU_Program_Wave__r.FAU_Participant_Chatter_Group_Id__c , FAU_Program_Name__c)</formula>
        <label>Chatter Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Company_Building_and_Street__c</fullName>
        <label>Company Building and Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FAU_Company_City__c</fullName>
        <label>Company City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Company_Code__c</fullName>
        <label>Company Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Company_Country__c</fullName>
        <label>Company Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Company_Details_Flag__c</fullName>
        <formula>IF((( FAU_Company_Name__c &lt;&gt; NULL)&amp;&amp; 
( FAU_Company_Code__c  &lt;&gt; NULL)&amp;&amp; 
( FAU_Company_Building_and_Street__c  &lt;&gt; NULL) &amp;&amp; 
( FAU_Company_City__c  &lt;&gt; NULL) &amp;&amp; 
( FAU_Company_Country__c  &lt;&gt; NULL) &amp;&amp; 
( FAU_Company_Zip_Code__c  &lt;&gt; NULL) 
) 
,True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Details Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAU_Company_Details_Message__c</fullName>
        <formula>IF(  FAU_Company_Details_Flag__c  &lt;&gt; False, IMAGE(&apos;/img/msg_icons/confirm16.png&apos;, &apos;True&apos;), 
IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;False&apos;) + &apos;: You have missing Company Details. &apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Details Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Company_Name__c</fullName>
        <label>Company Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Company_Zip_Code__c</fullName>
        <label>Company Zip Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Completeness_Flag__c</fullName>
        <formula>IF( FAU_Personal_Details_Flag__c &amp;&amp; 
     FAU_Line_Manager_Details_Flag__c, 
True, False)</formula>
        <label>Registration Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAU_Completeness_Icon__c</fullName>
        <formula>IF( FAU_Personal_Details_Flag__c &amp;&amp; 
     FAU_Line_Manager_Details_Flag__c, 
      IMAGE(&apos;/img/msg_icons/confirm16.png&apos;, &apos;True&apos;),
      IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;False&apos;) 
      )</formula>
        <label>Registration Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Completeness_Message__c</fullName>
        <formula>IF(FAU_Personal_Details_Flag__c = False, &apos;You have missing Personal Details&apos; +  BR() , &apos;&apos;) +
    IF(FAU_Line_Manager_Details_Flag__c = False, &apos;You have missing Line Managers Details.&apos; + BR(), &apos;&apos; )</formula>
        <label>Completeness Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Decline_Reason__c</fullName>
        <label>Decline Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Schedule Contrainsts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Going on Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving Roles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaving Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FAU_Education__c</fullName>
        <label>Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FAU_Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FAU_Employee_Details_Flag__c</fullName>
        <formula>IF( ( FAU_Employee_Number__c  &lt;&gt; NULL)&amp;&amp; 
    ( FAU_Approver_of_Nomination__c  &lt;&gt; NULL)&amp;&amp; 
    ( FAU_Budget_Holder__c  &lt;&gt; NULL) &amp;&amp; 
    ( FAU_Person_to_invoice__c  &lt;&gt; NULL) &amp;&amp; 
    ( FAU_Cost_Center__c  &lt;&gt; NULL) &amp;&amp;
    ( FAU_GL_Code__c &lt;&gt; NULL)
       ,True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Details Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAU_Employee_Details_Message__c</fullName>
        <formula>IF(  FAU_Employee_Details_Flag__c  &lt;&gt; False, IMAGE(&apos;/img/msg_icons/confirm16.png&apos;, &apos;True&apos;), 
        IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;False&apos;) + &apos;: You have missing Employee Details. &apos; )</formula>
        <label>Employee Details Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Employee_Number__c</fullName>
        <externalId>true</externalId>
        <label>Employee Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_First_Name__c</fullName>
        <label>First Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_GL_Code__c</fullName>
        <label>GL Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_ICC__c</fullName>
        <label>ICC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Invitation_Link__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &apos;apex/FAU_Participant_Register?id=&apos; +  Id, &apos;this form&apos;)</formula>
        <label>Invitation Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Invite_State__c</fullName>
        <description>Not used by User</description>
        <inlineHelpText>New - The Participant has not been sent an invite yet
Invited - The Participant has been sent an invite, but not accepted/declined yet
Accepted - The Participant accepted 
Declined - The Participant Declined
Completed - The Participant Completed</inlineHelpText>
        <label>Invite State</label>
        <picklist>
            <picklistValues>
                <fullName>Not yet invited</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Invited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FAU_Invite_Status__c</fullName>
        <formula>TEXT(FAU_Invite_State__c)</formula>
        <inlineHelpText>New - The Participant has not been sent an invite yet
Invited - The Participant has been sent an invite, but not accepted/declined yet
Accepted - The Participant accepted a place on the program
Declined - The Participant Declined a place on the program</inlineHelpText>
        <label>Invite Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Is_Participant_Shared__c</fullName>
        <formula>IF((CASE( TEXT(FAU_Invite_State__c), 
       &quot;New&quot;, &quot;False&quot;, 
       &quot;Invited&quot;, &quot;True&quot;,
       &quot;Accepted&quot;, &quot;True&quot;,
       &quot;Declined&apos;&quot;, &quot;False&quot;,
       &quot;False&quot;))= &quot;True&quot;, True, False)</formula>
        <label>Is Participant Shared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAU_Is_deferred_To_PA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Would you like your PA to handle this request?</description>
        <inlineHelpText>Would you like your PA to handle this request?</inlineHelpText>
        <label>Is deferred To PA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAU_Job_Title__c</fullName>
        <label>Job Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Last_Email_Sent__c</fullName>
        <description>This is the Last Email Sent</description>
        <inlineHelpText>This is the Last Email Sent</inlineHelpText>
        <label>Last Email Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Line_Manager_Details_Flag__c</fullName>
        <formula>IF((( FAU_Line_Manager__c &lt;&gt; NULL)&amp;&amp; 
( FAU_Line_Manager_s_Email_Address__c  &lt;&gt; NULL)&amp;&amp; 
( FAU_Line_Manager_s_Job_Title__c  &lt;&gt; NULL) &amp;&amp; 
( FAU_Line_Manager_s_Name__c &lt;&gt; NULL) &amp;&amp; 
( FAU_Line_Manager_s_Secretary_s_Name__c   &lt;&gt; NULL)) 
,True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Manager Details Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAU_Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FAU_Participants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAU_Line_Manager_s_Details_Message__c</fullName>
        <formula>IF( FAU_Line_Manager_Details_Flag__c &lt;&gt; False, IMAGE(&apos;/img/msg_icons/confirm16.png&apos;, &apos;True&apos;), 
IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;False&apos;) + &apos;: You have missing Line Managers Details. &apos;)</formula>
        <label>Line Manager&apos;s Details Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Line_Manager_s_Email_Address__c</fullName>
        <formula>FAU_Email_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Manager&apos;s Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Line_Manager_s_Job_Title__c</fullName>
        <label>Line Manager&apos;s Job Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Line_Manager_s_Name__c</fullName>
        <formula>FAU_Line_Manager__r.FirstName + &apos; &apos; + FAU_Line_Manager__r.LastName</formula>
        <label>Line Manager&apos;s Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Line_Manager_s_Secretary_s_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Manager’s Secretary’s Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FAU_Participants4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAU_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + Id , &quot;Link&quot;)</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FAU_Module_1_End_Date__c</fullName>
        <formula>FAU_Program_Wave__r.FAU_End_Date_of_Module_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module 1 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAU_Module_1_Start_Date__c</fullName>
        <formula>FAU_Program_Wave__r.FAU_Start_Date_of_Module_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module 1 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAU_No_of_Incomplete_Modules__c</fullName>
        <label>No of Incomplete Modules</label>
        <summaryForeignKey>FAU_Module_Participant__c.FAU_Participant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FAU_Participants_Workbook__c</fullName>
        <formula>IF( ISPICKVAL(FAU_Invite_State__c,&apos;Declined&apos;),&apos;Invitation declined&apos;,HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &apos;apex/FAU_LandingPage?id=&apos; + Id, &apos;Participants Workbook&apos;))</formula>
        <label>Participants Workbook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Person_to_Invoice_s_Email__c</fullName>
        <formula>FAU_Person_to_invoice__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person to Invoice&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Person_to_invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person to invoice</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FAU_Participants3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAU_Personal_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Personal Assistant</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>An active standard user needs to be chosen.</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.User_License__c</field>
                <operation>equals</operation>
                <value>Salesforce</value>
            </filterItems>
            <filterItems>
                <field>User.User_License__c</field>
                <operation>equals</operation>
                <value>Salesforce Platform</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>FAU_Participants5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAU_Personal_Assistant_s_Email__c</fullName>
        <formula>FAU_Personal_Assistant__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Assistant&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Personal_Details_Flag__c</fullName>
        <formula>IF(((TEXT(FAU_Title__c )&lt;&gt; NULL)&amp;&amp; 
(FAU_First_Name__c &lt;&gt; NULL)&amp;&amp; 
(FAU_Last_Name__c  &lt;&gt; NULL) &amp;&amp; 
(FAU_Job_Title__c &lt;&gt; NULL) &amp;&amp; 
(FAU_Mobile_Number__c &lt;&gt; NULL) &amp;&amp; 
(FAU_Email_Address__c &lt;&gt; NULL)) 
,True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Details Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAU_Personal_Details_Message__c</fullName>
        <formula>IF( FAU_Personal_Details_Flag__c &lt;&gt; False, 
      IMAGE(&apos;/img/msg_icons/confirm16.png&apos;, &apos;True&apos;),
      IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;False&apos;) + &apos;: You have missing Personal Details&apos; 
       )</formula>
        <label>Personal Details Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Personal__c</fullName>
        <inlineHelpText>Share anything you like about yourself, where you live, hobbies, family</inlineHelpText>
        <label>Personal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FAU_Previously_a_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the user has previously attended this course and has taken a sabbatical. Enter the Participant record and the information from previously will be filled.</description>
        <inlineHelpText>If the user has previously attended this course and has taken a sabbatical. Enter the Participant record and the information from previously will be filled.</inlineHelpText>
        <label>Previously a Participant</label>
        <referenceTo>FAU_Participant__c</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Later_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAU_Prior_Career__c</fullName>
        <label>Prior Career</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FAU_Program_Banner_URL__c</fullName>
        <formula>FAU_Program_Wave__r.FAU_Program_Banner_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Banner URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Program_Chatter_Group_Id__c</fullName>
        <formula>FAU_Program_Wave__r.FAU_Participant_Chatter_Group_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Chatter Group Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Program_Don_t_Send_Reminders__c</fullName>
        <formula>FAU_Program_Wave__r.FAU_Don_t_Send_Reminders__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is set at program level. It stops reminders being set.</inlineHelpText>
        <label>Program:Don&apos;t Send Reminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAU_Program_Fee__c</fullName>
        <formula>FAU_Program_Wave__r.FAU_Program_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAU_Program_Id__c</fullName>
        <formula>FAU_Program_Wave__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Program_Location__c</fullName>
        <formula>TEXT( FAU_Program_Wave__r.FAU_Primary_Location__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Program_Name__c</fullName>
        <formula>FAU_Program_Wave__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Program_Start_Date_Quarter__c</fullName>
        <formula>FAU_Program_Wave__r.FAU_Start_Date_Quarter__c</formula>
        <label>Program Start Date Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Program_Start_Date__c</fullName>
        <formula>FAU_Program_Wave__r.FAU_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAU_Program_Type__c</fullName>
        <formula>TEXT(FAU_Program_Wave__r.FAU_Program_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Program_Wave__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FAU_Program__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Core, Franchise</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FAU_Program__c</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>FAU_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAU_RSVP_Deadline__c</fullName>
        <formula>FAU_Program_Wave__r.FAU_Invitation_ResponseDeadline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSVP Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAU_Request_PA_User_Email_Address__c</fullName>
        <description>This gets filled when the participant can&apos;t find the Personal Assistant User and is requesting a user login for the PA.</description>
        <inlineHelpText>This gets filled when the participant can&apos;t find the Personal Assistant User and is requesting a user login for the PA.</inlineHelpText>
        <label>Request PA User Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FAU_Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FAU_Unilever_Career__c</fullName>
        <label>Unilever Career</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FAU_Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FAU_Upload_final_IDP_on_Talent_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload final IDP on Talent Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAU_User_License__c</fullName>
        <formula>FAU_User__r.User_License__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>An active standard user needs to be chosen.</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.User_License__c</field>
                <operation>equals</operation>
                <value>Salesforce</value>
            </filterItems>
            <filterItems>
                <field>User.User_License__c</field>
                <operation>equals</operation>
                <value>Salesforce Platform</value>
            </filterItems>
            <infoMessage>Select the Salesforce User who you want to participate in this program wave.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>FAU_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAU_Video_Introduction__c</fullName>
        <formula>IF(ISBLANK(FAU_Program_Wave__r.FAU_Video_Introduction__c),
     &apos;&apos;,
        BR() &amp; &apos;Here’s a short video introduction to the program: &apos;  &amp; FAU_Program_Wave__r.FAU_Video_Introduction__c )</formula>
        <label>Video Introduction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Webinar_Date_Time__c</fullName>
        <label>Webinar Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>Participant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FAU_First_Name__c</columns>
        <columns>FAU_Last_Name__c</columns>
        <columns>FAU_User__c</columns>
        <columns>FAU_Bio_Completeness_Flag__c</columns>
        <columns>FAU_Company_Name__c</columns>
        <columns>FAU_Invite_State__c</columns>
        <columns>FAU_Program_Wave__c</columns>
        <columns>FAU_Completeness_Icon__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FAU_PA_User_Request_FAU_Participant</fullName>
        <filterScope>Queue</filterScope>
        <label>FAU PA User Request</label>
        <queue>FAU_PA_User_Request</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Program_Update_List</fullName>
        <columns>NAME</columns>
        <columns>FAU_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>Program Update List</label>
    </listViews>
    <nameField>
        <displayFormat>Participant-{0000}</displayFormat>
        <label>Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FAU_If_PA_active_PA_needs_to_be_filled</fullName>
        <active>true</active>
        <description>If application has been assigned to PA to fill the forms then the PA needs to be identified.</description>
        <errorConditionFormula>FAU_Is_deferred_To_PA__c = True &amp;&amp;
 ISBLANK(FAU_Personal_Assistant__c)</errorConditionFormula>
        <errorDisplayField>FAU_Personal_Assistant__c</errorDisplayField>
        <errorMessage>If application has been assigned to Personal Assistant to fill the forms then the Personal Assistant needs to be identified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FAU_PA_cant_be_the_participant</fullName>
        <active>true</active>
        <description>Participant User and Personal Assistant can be the same person.</description>
        <errorConditionFormula>FAU_User__c =  FAU_Personal_Assistant__c &amp;&amp; FAU_Personal_Assistant__c &lt;&gt; null</errorConditionFormula>
        <errorDisplayField>FAU_Personal_Assistant__c</errorDisplayField>
        <errorMessage>You can&apos;t nominate yourself as your Personal Assistant.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FAU_PA_cant_be_the_program_owner</fullName>
        <active>true</active>
        <description>Program Owner and Personal Assistant can&apos;t be the same person.</description>
        <errorConditionFormula>FAU_Program_Wave__r.OwnerId  =  FAU_Personal_Assistant__c &amp;&amp; FAU_Personal_Assistant__c &lt;&gt; null</errorConditionFormula>
        <errorDisplayField>FAU_Personal_Assistant__c</errorDisplayField>
        <errorMessage>You can&apos;t nominate program owner as your Personal Assistant.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FAU_Participant_Program_cant_be_changed</fullName>
        <active>true</active>
        <description>Participant&apos;s program can&apos;t be changed.</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp;  ISCHANGED( FAU_Program_Wave__c )</errorConditionFormula>
        <errorDisplayField>FAU_Program_Wave__c</errorDisplayField>
        <errorMessage>Participant&apos;s program can&apos;t be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FAU_Participant_cant_be_the_progam_owner</fullName>
        <active>true</active>
        <description>Participant_can&apos;t_be_the_progam owner</description>
        <errorConditionFormula>FAU_User__c =  FAU_Program_Wave__r.OwnerId</errorConditionFormula>
        <errorMessage>Participant can&apos;t be the progam owner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FAU_Participants_added_Active_Programs</fullName>
        <active>true</active>
        <description>Participants can only be added to Active Programs</description>
        <errorConditionFormula>TEXT(FAU_Program_Wave__r.FAU_Status__c) &lt;&gt; &apos;Active&apos; &amp;&amp; ISNEW()</errorConditionFormula>
        <errorMessage>Participants can only be added to Active Programs.
Change the program status to &apos;Active&apos; to continue.</errorMessage>
    </validationRules>
</CustomObject>